--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bicycle-hw</title>
-    <link rel="shortcut icon" href="image/logo1.png">
+    <link rel="shortcut icon" href="image/favicon.png" type="image/png">
     <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
@@ -26,13 +26,13 @@
                         <li><a href="#shop">Shop</a></li>
                         <li><a href="#contact">Contact</a></li>
                     </ul>
-                    <a href="#" class="logo mobile-logo">
-                        <img src="image/logo1.png" alt="logo-mobile">
-                    </a>
-                    <span class="menu-button">
-                        <span></span>
-                    </span>
                 </div>
+                <a href="#" class="mobile-logo">
+                    <img src="image/logo1.png" alt="logo-mobile">
+                </a>
+                <span class="menu-button">
+                    <span></span>
+                </span>
             </div>
         </header>
         <main class="main">
