--- a/index.html
+++ b/index.html
@@ -333,7 +333,10 @@
                                 </li>
                                 <li>
                                     <a href="#">
-                                        New York, NY 10035 - <a href="mailto:info@domain.com">info@domain.com</a>
+                                        New York, NY 10035 -
+                                    </a>
+                                    <a href="mailto:info@domain.com">
+                                        info@domain.com
                                     </a>
                                 </li>
                             </ul>
